--- a/css/style.css
+++ b/css/style.css
@@ -674,7 +674,6 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 #services .btn-row {
   text-align: center;
-  margin-top: 20px;
 }
 
 #services .btn-get-service {
@@ -750,6 +749,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   font-family: "Montserrat", sans-serif;
   font-size: 16px;
   color: #333;
+  margin-bottom: -30px;
 }
 
 #contact .row {
@@ -865,6 +865,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   font-size: 13px;
   color: #ccc;
 }
+
 
 
 
